--- a/dev/styles.css
+++ b/dev/styles.css
@@ -1,3 +1,9 @@
+:root{
+    --bleu: #23283d;
+    --blanc: #e2dfd8;
+    --bleuclair: #a4c7cd;
+}
+
 *{
     margin: 0;
     padding: 0;
@@ -10,24 +16,21 @@ body{
     flex-direction: column;
     height: 100vh;
     width: 100vw;
-    background-image: url("img/background.jpg");
-    background-size: cover;
-    background-position: center;
 }
 
 a{
     text-decoration: none;
-    color: #e2dfd8;
+    color: var(--blanc);
     font-size: 20px;
 }
 
 h1{
     font-size: 53px;
-    color: #a4c7cd;
+    color: var(--bleuclair);
 }
 
 p{
-    color: #e2dfd8;
+    color: var(--blanc);
     font-size: 16px;
 }
 
@@ -36,7 +39,7 @@ a:hover{
 }
 
 header{
-    background-color: #23283d;
+    background-color: var(--bleu);
     padding: 15px;
 }
 
@@ -49,7 +52,7 @@ nav {
 }
 
 .logo {
-    color: #a4c7cd;
+    color: var(--bleuclair);
     font-size: 24px;
     font-weight: bold;
 }
@@ -60,8 +63,17 @@ nav ul {
     gap: 20px;
 }
 
+main{
+    flex: 1;
+    background-image: url("img/background.jpg");
+    background-size: cover;
+    background-position: center;
+    display: flex;
+}
+
 .container{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
     flex: 1;
@@ -77,20 +89,92 @@ nav ul {
     padding: 50px;
     width: 70%;
     border-radius: 10px;
-    background-color: #23283d ;
+    background-color: var(--bleu) ;
     opacity: 0.7;
 }
 
 button {
     margin-top: 20px;
     padding: 10px 20px;
-    background-color: #a4c7cd;
+    background-color: var(--bleuclair);
     border: none;
     border-radius: 5px;
-    color: #23283d;
+    color: var(--bleu);
     cursor: pointer;
 }
 
 button:hover {
-    background-color: #88a6a9;
+    background-color: var(--bleuclair);
+}
+
+.content_box{
+    display: flex;
+    justify-content: center;
+    align-items: center;  
+    flex-wrap: wrap;
+    gap: 50px;
+    padding: 50px 100px 100px 100px;
+}
+
+.content_box .box{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    gap: 20px;
+
+    width: 300px;
+    height: 200px;
+
+    background-color: var(--bleu);
+    opacity: 0.8;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.content_box .box:hover{
+    transform: scale(1.1);
+    transition: all 0.5s;
+    border: 5px solid var(--blanc);
+}
+
+.content_box .box .icon{
+    font-size: 80px;
+    color: var(--blanc);
+}
+
+.content_box .box p{
+    font-size: 25px;
+}
+
+.content_box .box:nth-child(3) .icon{
+    color: #ff5757;
+}
+
+
+
+.rdv{
+    display: flex;
+    background-color: var(--bleu);
+    opacity: 0.8;
+    border-radius: 30px;
+}
+
+.left, .right{
+    padding: 20px;
+}
+
+.rdv .left{
+    display: flex;
+    justify-content: left;
+    background-color: var(--blanc);
+    border-radius: 30px;
+}
+
+.rdv .left p{
+    color: var(--bleu);
+}
+
+.left p, .right p{
+    font-size: 20px;
 }
