--- a/dev/styles.css
+++ b/dev/styles.css
@@ -15,7 +15,6 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 100vw;
 }
 
 a{
@@ -74,9 +73,14 @@ main{
 .container{
     display: flex;
     flex-direction: column;
+
     justify-content: center;
     align-items: center;
+
     flex: 1;
+
+    width: 100%;
+    padding: 50px;
 }
 
 .content{
@@ -111,9 +115,12 @@ button:hover {
     display: flex;
     justify-content: center;
     align-items: center;  
+
     flex-wrap: wrap;
     gap: 50px;
-    padding: 50px 100px 100px 100px;
+
+    width: 100%;
+    padding: 50px 5%;
 }
 
 .content_box .box{
@@ -177,4 +184,17 @@ button:hover {
 
 .left p, .right p{
     font-size: 20px;
+}
+
+
+form {
+    background-color: var(--bleu);
+    opacity: 0.8;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+}
+
+form label {
+    color: var(--blanc);
 }
